# rust_dmmsuite

./: Cargo.toml  build.rs  profile_vorestation_dmmsuite_calls.txt  profile_vorestation_dmmsuite_overtick.txt  profile_vorestation_dmmsuite_rtime.txt  profile_vorestation_dmmsuite_scpu.txt  profile_vorestation_dmmsuite_tcpu.txt  run-test.bat
benches/: bench_parser.rs
dmsrc/: main.dm
src/: Coords.rs  DMM.rs  Prefab.rs  lib.rs  prefab.pest  test.rs
src/byond/: Hooks.rs  ReadMap.rs  mod.rs
src/dmm_tests/: gpt.dmm  tether.dmm
src/parser/: Coord.rs  CoordBlock.rs  Coords.rs  DMM.pest  DMM.rs  Prefab.rs  mod.rs
src/tests/: mod.rs  test_parsing.rs
tests/: test_byond.rs
tests/dm/: common.dm  generic.dme
tests/dm/maps/: defs.dm  gpt.dmm  just_white.dmm
