[package]
name = "rust_dmmsuite"
version = "0.1.0"
authors = ["Tigercat2000 <nick.pilant2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# auxtools = { git = "https://github.com/willox/auxtools" }
pest = "2.1.3"
pest_derive = "2.1.0"
serde_json = "1.0"
rayon = "1.5.0"

[profile.release]
opt-level = 3
lto = 'thin'
codegen-units = 1
incremental = true
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_parser"
harness = false